chore: add UpdateExample  & DeleteExample interface
