# api/swagger/swagger.json
@@ -31,6 +31,33 @@
                 }
             }
         },
+        "/examples/deleteExample": {
+            "post": {
+                "description": "Delete Example",
+                "tags": [
+                    "Example"
+                ],
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/examples/getExample": {
             "get": {
                 "description": "Get Example",
@@ -44,6 +71,33 @@
                         "name": "exampleId",
                         "in": "query",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/examples/updateExample": {
+            "post": {
+                "description": "Update Example",
+                "tags": [
+                    "Example"
+                ],
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
