# internal/router/example.go
@@ -12,6 +12,8 @@ func LoadExampleRoutes(r *gin.Engine) *gin.RouterGroup {
 	{
 		example.POST("/createExample", exampleController.CreateExample)
 		example.GET("/getExample", exampleController.GetExample)
+		example.POST("/updateExample", exampleController.UpdateExample)
+		example.POST("/deleteExample", exampleController.DeleteExample)
 	}
 	return example
 }
